--- a/infra/helmchart/templates/secret.yaml
+++ b/infra/helmchart/templates/secret.yaml
@@ -1,10 +1,22 @@
+{{- range $app := .Values.applications }}
+{{- if $app.enabled }}
+{{- if $app.app.secrets }}
+---
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "app-umbrella-chart.fullname" . }}-secrets
+  name: {{ $app.name }}-secrets
+  namespace: {{ $.Values.namespace.name }}
   labels:
-    {{- include "app-umbrella-chart.labels" . | nindent 4 }}
+    app.kubernetes.io/name: {{ $app.name }}
+    app.kubernetes.io/instance: {{ $.Release.Name }}
+    app.kubernetes.io/version: {{ $.Chart.AppVersion | quote }}
+    app.kubernetes.io/managed-by: {{ $.Release.Service }}
 type: Opaque
 data:
-  SECRET_KEY: {{ .Values.app.secrets.SECRET_KEY | b64enc | quote }}
-  DB_PASSWORD: {{ .Values.app.secrets.DB_PASSWORD | b64enc | quote }}
+  {{- range $key, $value := $app.app.secrets }}
+  {{ $key }}: {{ $value | b64enc | quote }}
+  {{- end }}
+{{- end }}
+{{- end }}
+{{- end }}
