--- a/infra/helmchart/templates/ingress.yaml
+++ b/infra/helmchart/templates/ingress.yaml
@@ -1,43 +1,34 @@
-{{- if .Values.ingress.enabled -}}
+{{- range $app := .Values.applications }}
+{{- if and $app.enabled $app.ingress.enabled }}
+---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ include "app-umbrella-chart.fullname" . }}
+  name: {{ $app.name }}-ingress
+  namespace: {{ $.Values.namespace.name }}
   labels:
-    {{- include "app-umbrella-chart.labels" . | nindent 4 }}
-  {{- with .Values.ingress.annotations }}
+    app.kubernetes.io/name: {{ $app.name }}
+    app.kubernetes.io/instance: {{ $.Release.Name }}
+    app.kubernetes.io/version: {{ $.Chart.AppVersion | quote }}
+    app.kubernetes.io/managed-by: {{ $.Release.Service }}
+  {{- with ($app.ingress.annotations | default $.Values.defaultApp.ingress.annotations) }}
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
-  {{- with .Values.ingress.className }}
+  {{- with ($app.ingress.className | default $.Values.defaultApp.ingress.className) }}
   ingressClassName: {{ . }}
   {{- end }}
-  {{- if .Values.ingress.tls }}
-  tls:
-    {{- range .Values.ingress.tls }}
-    - hosts:
-        {{- range .hosts }}
-        - {{ . | quote }}
-        {{- end }}
-      secretName: {{ .secretName }}
-    {{- end }}
-  {{- end }}
   rules:
-    {{- range .Values.ingress.hosts }}
-    - host: {{ .host | quote }}
+    - host: {{ $app.ingress.host | default $.Values.defaultApp.ingress.host | quote }}
       http:
         paths:
-          {{- range .paths }}
-          - path: {{ .path }}
-            {{- with .pathType }}
-            pathType: {{ . }}
-            {{- end }}
+          - path: {{ $app.ingress.path | default $.Values.defaultApp.ingress.path }}
+            pathType: {{ $app.ingress.pathType | default $.Values.defaultApp.ingress.pathType }}
             backend:
               service:
-                name: {{ include "app-umbrella-chart.fullname" $ }}
+                name: {{ $app.name }}-service
                 port:
-                  number: {{ $.Values.service.port }}
-          {{- end }}
-    {{- end }}
+                  number: {{ $app.service.port | default $.Values.defaultApp.service.port }}
+{{- end }}
 {{- end }}
